RESOLVED FIXED66116
WebCore::AVFWrapper fails to remove observer for kCACFContextNeedsFlushNotification
https://bugs.webkit.org/show_bug.cgi?id=66116
Summary WebCore::AVFWrapper fails to remove observer for kCACFContextNeedsFlushNotifi...
Jeff Miller
Reported 2011-08-11 16:37:49 PDT
WebCore::AVFWrapper fails to remove observer for kCACFContextNeedsFlushNotification
Attachments
Patch (3.22 KB, patch)
2011-08-11 16:43 PDT, Jeff Miller
sullivan: review+
Jeff Miller
Comment 1 2011-08-11 16:43:49 PDT
Jeff Miller
Comment 2 2011-08-11 16:51:40 PDT
Jeff Miller
Comment 3 2011-08-11 17:20:13 PDT
Note You need to log in before you can comment on or make changes to this bug.