Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundationCF.cpp
@@ -895,7 +895,7 @@ void AVFWrapper::disconnectAndDeleteAVFWrapper(void* context)
         CFNotificationCenterRemoveObserver(center, avfWrapper, AVCFPlayerItemIsPlaybackLikelyToKeepUpChangedNotification, avfWrapper->avPlayerItem());
         CFNotificationCenterRemoveObserver(center, avfWrapper, AVCFPlayerItemIsPlaybackBufferEmptyChangedNotification, avfWrapper->avPlayerItem());
         CFNotificationCenterRemoveObserver(center, avfWrapper, AVCFPlayerItemIsPlaybackBufferFullChangedNotification, avfWrapper->avPlayerItem());
-        CFNotificationCenterRemoveObserver(center, avfWrapper, CACFContextNeedsFlushNotification(), avfWrapper->avPlayerItem());
+        CFNotificationCenterRemoveObserver(center, avfWrapper, CACFContextNeedsFlushNotification(), 0);
     }
 
     if (avfWrapper->avPlayer()) {
@@ -1026,11 +1026,9 @@ void AVFWrapper::notificationCallback(CFNotificationCenterRef, void* observer, C
         self->m_owner->scheduleMainThreadNotification(MediaPlayerPrivateAVFoundation::Notification::ItemIsPlaybackBufferFullChanged);
     else if (CFEqual(propertyName, AVCFPlayerRateChangedNotification))
         self->m_owner->scheduleMainThreadNotification(MediaPlayerPrivateAVFoundation::Notification::PlayerRateChanged);
-    else if (CFEqual(propertyName, CACFContextNeedsFlushNotification())) {
-        // FIXME: Note that until <rdar://problem/9885505> is fixed, we can get a kCACFContextNeedsFlushNotification after
-        // the AVFWrapper has gone away. We work around this for now by never actually deleting the underlying AVFWrapper object. 
+    else if (CFEqual(propertyName, CACFContextNeedsFlushNotification()))
         self->m_owner->scheduleMainThreadNotification(MediaPlayerPrivateAVFoundation::Notification::ContentsNeedsDisplay);
-    } else
+    else
         ASSERT_NOT_REACHED();
 }
 
